<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView

            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nickNameTextView"
            android:textAlignment="center"
            style="@style/nameStyle"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/nickName" style="@style/nameStyle" android:hint="@string/nick_name_hint"
            android:inputType="text"/>
    <Button
            android:text="@string/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/done_button" style="@style/nameStyle"/>
    <ImageView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/star_image" android:contentDescription="@string/star_description"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                style="@style/nameStyle"
                android:lineSpacingMultiplier="1.6"
        />
    </ScrollView>
</LinearLayout>